# VulkanMod-Bedrock

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp
tools/: convert_materials.py  material_bin.py
